--- a/10-scroll/setup/index.html
+++ b/10-scroll/setup/index.html
@@ -77,8 +77,8 @@
     <!--footer-->
     <footer class="section">
       <p>
-        copyright &copy; backroads trave tours company <span class="date">
-          2020
+        copyright &copy; backroads trave tours company <span id="date">
+          
         </span>
         .all rights reserved
       </p>
