--- a/12-countdown-timer/setup/index.html
+++ b/12-countdown-timer/setup/index.html
@@ -9,7 +9,57 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
+    <section class="section-center">
+      <!--img-->
+      <article class="gift-img">
+        <img src="./gift.jpeg" alt="gift picture" />
+      </article>
+      <!--info-->
+      <article class="gift-info">
+        <h3>iphone giveaway</h3>
+        <h4 class="giveaway">giveaway end on sunday, 24 April 2022, 8:00am</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam
+          accusamus explicabo numquam, minima itaque debitis quo omnis totam
+          ipsa minus quia eos eveniet tenetur quasi praesentium illum laudantium
+          ex nobis!
+        </p>
+        <div class="deadline">
+          <!--days-->
+          <div class="deadline-format">
+            <div>
+              <h4 class="days">100</h4>
+              <span>days</span>
+            </div>
+          </div>
+          <!--end of item-->
+          <!--hours-->
+          <div class="deadline-format">
+            <div>
+              <h4 class="hours">34</h4>
+              <span>hours</span>
+            </div>
+          </div>
+          <!--end of item-->
+          <!--mins-->
+          <div class="deadline-format">
+            <div>
+              <h4 class="mins">34</h4>
+              <span>mins</span>
+            </div>
+          </div>
+          <!--end of item-->
+          <!--secs-->
+          <div class="deadline-format">
+            <div>
+              <h4 class="secs">34</h4>
+              <span>secs</span>
+            </div>
+          </div>
+          <!--end of item-->
+        </div>
+      </article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
